Добавлена авторизация.
